--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
-DB_PORT=5432
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASS=postgres
+# DB_PORT=5432
+# DB_NAME=db
+# DB_USER=postgres
+# DB_PASS=postgres
 
 
-#для разработки и тестирования
-DB_HOST=localhost
+# #для разработки и тестирования
+# DB_HOST=localhost
+# DB_HOST=test_db
 
-#для контейнера
-#DB_HOST=db
+# #для контейнера
+# #DB_HOST=db
+
+DATABASE_URL = "postgresql+asyncpg://postgres:postgres@localhost/db"
+TEST_DATABASE_URL = "postgresql+asyncpg://user:password@localhost/test_db"
