--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "fastapi>=0.116.1",
+    "loguru>=0.7.3",
+    "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
