--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,14 @@ description = "gamecenter for SpbSUT meetup"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aerich>=0.9.1",
+    "aioredis>=2.0.1",
     "asyncpg>=0.30.0",
     "fastapi>=0.116.1",
+    "fastapi-admin>=1.0.4",
     "loguru>=0.7.3",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
-    "sqlalchemy>=2.0.43",
     "tortoise-orm[asyncpg]>=0.25.1",
     "uvicorn>=0.35.0",
 ]
