--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,21 +15,23 @@ services:
 
   redis:
     image: redis:7-alpine
+    ports:
+        - 6379:6379
     volumes:
       - redis_data:/data
 
-  web:
-        container_name: web_gamecenter
-        build: .
-        command: uvicorn src.main:app --host 0.0.0.0 --port 80
-        env_file:
-          - .env
-        ports:
-          - 80:80
-        depends_on:
-          - db
-        networks:
-          - network
+  # web:
+  #       container_name: web_gamecenter
+  #       build: .
+  #       command: uvicorn src.main:app --host 0.0.0.0 --port 80
+  #       env_file:
+  #         - .env
+  #       ports:
+  #         - 80:80
+  #       depends_on:
+  #         - db
+  #       networks:
+  #         - network
 
 networks:
   network:
