--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ dependencies = [
     "fastadmin[fastapi,tortoise-orm]>=0.2.22",
     "fastapi>=0.116.1",
     "loguru>=0.7.3",
-    "passlib>=1.7.4",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
+    "python-jose[cryptography]>=3.5.0",
     "tortoise-orm[asyncpg]>=0.25.1",
     "uvicorn>=0.35.0",
 ]
@@ -23,6 +24,7 @@ dev = [
     "httpx>=0.28.1",
     "pytest>=8.4.2",
     "pytest-asyncio>=1.1.0",
+    "ruff>=0.13.0",
 ]
 system = [
     "setuptools>=80.9.0",
