--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "aerich>=0.9.1",
     "asyncpg>=0.30.0",
+    "authx>=1.4.3",
     "fastadmin[fastapi,tortoise-orm]>=0.2.22",
     "fastapi>=0.116.1",
     "loguru>=0.7.3",
