все сервисы работают

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ dependencies = [
     "aerich>=0.9.1",
     "asyncpg>=0.30.0",
     "authx>=1.4.3",
+    "bcrypt==4.0.1",
     "fastadmin[fastapi,tortoise-orm]>=0.2.22",
     "fastapi>=0.116.1",
     "loguru>=0.7.3",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib==1.7.4",
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
