--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   db:
       image: postgres:15
       container_name: db_gamecenter
+      command: -p 5432
+      expose:
+        - 5432
       ports:
         - 5432:5432
       environment:
@@ -14,18 +17,18 @@ services:
         - network
 
 
-  # web:
-  #       container_name: web_gamecenter
-  #       build: .
-  #       command: uvicorn src.main:app --host 0.0.0.0 --port 80
-  #       env_file:
-  #         - .env
-  #       ports:
-  #         - 80:80
-  #       depends_on:
-  #         - db
-  #       networks:
-  #         - network
+  web:
+        container_name: web_gamecenter
+        build: .
+        command: uv run uvicorn app.main:app --host 0.0.0.0 --port 80
+        env_file:
+          - .env
+        ports:
+          - 80:80
+        depends_on:
+          - db
+        networks:
+          - network
 
 networks:
   network:
@@ -33,4 +36,3 @@ networks:
 
 volumes:
   postgres_data:
-  redis_data:
