--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
         env_file:
           - .env
         ports:
-          - 80:80
+        # слева со стороны меня справа со стороны докера(я кстати прикола не понял там что фаерфол стоит на другие порты кроме 80???)
+          - 8000:80
         depends_on:
           - db
         networks:
