осталось обработка фото все остальное готово

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,13 @@ system = [
     "setuptools>=80.9.0",
 ]
 
+
+
 [tool.aerich]
-tortoise_orm = "db.DB_CONFIG"
-location = "./app/migrations"
-src_folder = "./app"
+
+tortoise_orm = "app.db.DB_CONFIG"
+
+location = "./migrations"
+
+src_folder = "./."
+
