--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "aerich>=0.9.1",
+    "aiofiles>=24.1.0",
     "asyncpg>=0.30.0",
     "authx>=1.4.3",
     "bcrypt==4.0.1",
