--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,11 @@ dependencies = [
     "aerich>=0.9.1",
     "aiofiles>=24.1.0",
     "asyncpg>=0.30.0",
-    "authx>=1.4.3",
     "bcrypt==4.0.1",
     "fastadmin[fastapi,tortoise-orm]>=0.2.22",
     "fastapi>=0.116.1",
     "loguru>=0.7.3",
     "passlib==1.7.4",
-    "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
@@ -43,3 +41,10 @@ location = "./migrations"
 
 src_folder = "./."
 
+[tool.ruff]
+# Set the maximum line length to 79.
+line-length = 79
+
+[tool.ruff.lint]
+# Add the `line-too-long` rule to the enforced rule set.
+extend-select = ["E501"]
