--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -15,8 +15,8 @@ server {
     listen 443 ssl;
     server_name api.играцетр.рф;
 
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.играцетр.рф/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.играцентр.рф/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
