--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name api.играцетр.рф;
+    server_name api.xn--80afhj2apdp7a.xn--p1ai;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -13,7 +13,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name api.играцетр.рф;
+    server_name api.xn--80afhj2apdp7a.xn--p1ai;
 
     ssl_certificate /etc/letsencrypt/live/api.играцетр.рф/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.играцентр.рф/privkey.pem;
